# StartupScript

./: CMakeLists.txt  README.md  plugin.cpp
Example/coc riverwood/: StartupScript.bat  main_menu_coc.ahk
Fonts/: Attributiuon.txt
Images/: Attribution.txt  Logo.xcf
